crates/rolldown_utils/tests/ui/pass_harness/fail_leak_token_panic.stderr
error[E0521]: borrowed data escapes outside of method
  --> tests/ui/pass_harness/fail_leak_token_panic.rs:22:5
   |
15 |   fn run<'run>(
   |          ---- lifetime `'run` defined here
16 |     self,
17 |     token: RunToken<'run, Self>,
   |     ----- `token` is a reference that is only valid in the method body
...
22 |     std::panic::panic_any(token)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     `token` escapes the method body here
   |     argument requires that `'run` must outlive `'static`
   |
   = note: requirement occurs because of the type `RunToken<'_, LeakingPass>`, which makes the generic argument `'_` invariant
   = note: the struct `RunToken<'run, P>` is invariant over the parameter `'run`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
